--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-  def project = 'canvas-fulcrum-173007'
+  def project = 'github'
   def appName = 'gceme'
   def feSvcName = "${appName}-frontend"
   def imageTag = "gcr.io/${project}/${appName}:${env.BRANCH_NAME}.${env.BUILD_NUMBER}"
